--- a/_includes/footer-post.html
+++ b/_includes/footer-post.html
@@ -1,4 +1,4 @@
 <footer role="contentinfo" class="page-footer">
 <p class="top-link"><a href="#top">return to top</a></p>
-<p class="legal">&copy; 2018 Geomechanics & Finite element method  | Geotechnical Lab of  <a href="http://www.cvg.ynu.ac.jp/G3/english/lab3-e.html" title="Civil Engineering Department Yokohama National University">Civil Engineering Department Yokohama National University</a>.</p>
+<p class="legal">&copy; 2018 Geomechanics & Finite Element Method  | Geotechnical Lab of  <a href="http://www.cvg.ynu.ac.jp/G3/english/lab3-e.html" title="Civil Engineering Department Yokohama National University">Civil Engineering Department Yokohama National University</a>.</p>
 </footer>
