--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer role="contentinfo" class="page-footer">
-<p class="legal">&copy; 2018 Geomechanics & Finite element method | Geotechincal Lab of <a href="http://www.cvg.ynu.ac.jp/G3/english/lab3-e.html" title="Civil Engineering Department Yokohama National University">Civil Engineering Department Yokohama National University"</a>.</p>
+<p class="legal">&copy; 2018 Geomechanics & Finite Element Method | Geotechnical Engineering Lab of <a href="http://www.cvg.ynu.ac.jp/G3/english/lab3-e.html" title="Civil Engineering Department Yokohama National University">Civil Engineering Department Yokohama National University"</a>.</p>
 </footer>
