--- a/css/main.css
+++ b/css/main.css
@@ -300,7 +300,7 @@ th {
 	background: white;
 	direction: ltr;
 	text-align: justify;
-	background-image: {{site.url}}/assests/(ban.png);
+	background-image: {{site.url}}/assests/ban.png;
 }
 
 h1, h2, h3, h4, h5, h6 {
