--- a/css/main.css
+++ b/css/main.css
@@ -798,7 +798,7 @@ header p {
    top navigation styles
 -----------------------------------------------------*/
 nav {
-	background: blue;
+	background: ;
 	margin-bottom: 2em;
 	/*background-color: #fff; */
 	text-align: center
