--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,13 +20,27 @@
   <![endif]-->
 </head>
 <body>
+	
+
+<div id="header">
+<h3> vunguyen.com</h3>
+</div>
+ 
+<div id="navbar">	
+	<ul>
+	<li><a href="">Home</a></li>
+	<li><a href="">About</a></li>
+	<li><a href="">Publishcations</a></li>
+	<li><a href="">Academic notes</a></li>
+	</ul>
+</div>
+
+	
 <header role="banner" class="page-header" id="top">
     <!--<h1>{{site.title}}</h1>-->
     <h1 class = "main_title">Welcome to VuNguyen's website</h1>
     <!--<p>{{site.tagline}}</p>-->
     <!--<p class = "main_title">welcome to Vu's website</p>-->
-
-	
 
 <!--
 <nav role="navigation">
