--- a/css/main.css
+++ b/css/main.css
@@ -897,3 +897,42 @@ a.more {
 .text-justify {
   text-align: justify;
 }
+
+	
+#header {
+	background-color: #5c755e;
+	margin: 10px;
+	height: 90px;
+	border-radius: 5px
+}
+
+
+#navbar ul {
+	background-color: black;
+	list-style-type: none;
+	text-align: center;
+	margin: 10px;
+	border-radius: 5px;
+	padding: 15px;
+}
+
+#navbar ul li {
+	display: inline;
+}
+
+#navbar ul li a {
+	text-decoration: none;
+	font-family: Arial;
+	padding: .2em 2em;
+	color: #fff;
+	background-color: #000;
+}
+
+#navbar ul li a:hover {
+	text-decoration: none;
+	font-family: Arial;
+	padding: .5em 2em;
+	color: red;
+	background-color: white;
+	border-radius: 6px;
+}
