--- a/css/main.css
+++ b/css/main.css
@@ -936,3 +936,19 @@ a.more {
 	background-color: white;
 	border-radius: 6px;
 }
+
+	
+h6 {
+	font-size: 250%;
+	text-align: center;
+	color: white;
+	font-family: Arial;
+	margin: 0px;
+
+	position: relative;
+		top: 50%;	
+		-webkit-transform: translateY(-50%):
+		-ms-transform: translateY(-50%);
+		transform: translateY(-50%);
+
+}
