--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
  
 <div id="navbar">	
 	<ul>
-	<li><a href="{{site.baseurl}}/index2.html">Home</a></li>
+	<li><a href="{{site.baseurl}}/index2.html">Home2</a></li>
 	<li><a href="">About</a></li>
 	<li><a href="">Publishcations</a></li>
 	<li><a href="">Academic notes</a></li>
