--- a/css/main.css
+++ b/css/main.css
@@ -358,7 +358,7 @@ th {
 	background-image: {{site.url}}/assests/ban.png;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5 {
  	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
         font-size: 200%; /*font-weight: 500; */
   	text-align: left;
