--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,17 @@
  
 <div id="navbar">	
 	<ul>
-	<li><a href="{{site.baseurl}}/index1.html">Home1</a></li>
-	<li><a href="">About</a></li>
-	<li><a href="">Publishcations</a></li>
+	<li><a href="{{site.baseurl}}/index.html">Blog</a></li>
+	<li><a href="{{site.baseurl}}/Family.html">Family</a></li>
+	<li><a href="{{site.baseurl}}/Publications.html">Publications</a></li>
 	<li><a href="">Academic notes</a></li>
+	<li><a href="#"> Academic Notes </a>	  
+	 	 <ul>
+		<li><a href="{{site.baseurl}}/Plasticity.html"> Plasticity </a></li>
+	        <li><a href="{{site.baseurl}}/geotech.html"> Geomechanics </a></li>
+	        <li><a href="{{site.baseurl}}/FEM.html"> FEM </a></li>
+		</ul>
+ 	 </li>
 	</ul>
 </div>
 
