--- a/css/main.css
+++ b/css/main.css
@@ -11,13 +11,13 @@
 
 
 #navbar ul {
-	background-color: blue;
+	background-color: black;
 	list-style-type: none;
 	text-align: center;
 	margin: 0px;
 	border-radius: 0px;
 	padding: 15px;
-	display: inline-block;
+	
 }
 
 #navbar ul li {
@@ -39,7 +39,7 @@
 	color: red;
 	background-color: white;
 	border-radius: 6px;
-	display: block;
+	/*display: block;*/
 }
 
 	
