--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,18 @@
 	<li><a href="{{site.baseurl}}/index.html">Blog</a></li>
 	<li><a href="{{site.baseurl}}/Family.html">Family</a></li>
 	<li><a href="{{site.baseurl}}/Publications.html">Publications</a></li>
+	<li><a href="{{site.baseurl}}/Plasticity.html"> Plasticity </a></li>
+	<li><a href="{{site.baseurl}}/geotech.html"> Geomechanics </a></li>
+	<li><a href="{{site.baseurl}}/FEM.html"> FEM </a></li>	
+	</ul>
+</div>
+	
+	
+<div id="navbar">	
+	<ul>
+	<li><a href="{{site.baseurl}}/index.html">Blog</a></li>
+	<li><a href="{{site.baseurl}}/Family.html">Family</a></li>
+	<li><a href="{{site.baseurl}}/Publications.html">Publications</a></li>
 	<li><a href="#"> Academic Notes </a>	  
 	 	 <ul>
 		<li><a href="{{site.baseurl}}/Plasticity.html"> Plasticity </a></li>
