--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
  
 <div id="navbar">	
 	<ul>
+	<li><a href="{{site.baseurl}}/about.html">Home</a></li>
 	<li><a href="{{site.baseurl}}/index.html">Blog</a></li>
 	<li><a href="{{site.baseurl}}/Family.html">Family</a></li>
 	<li><a href="{{site.baseurl}}/Publications.html">Publications</a></li>
