--- a/css/main.css
+++ b/css/main.css
@@ -4,10 +4,10 @@
 	
 #header {
 	background-color: red/* #5c755e; */;
-	margin: 10px;
+	margin: 0px;
 	height: 90px;
 	border-radius: 5px;
-	background-image: url(cloud.jpg);
+	background-image: {{ site.baseurl }}/cloud.jpg;
 
 }
 
