--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 	margin: 0px;
 	height: 90px;
 	border-radius: 0px;
-	background-image: {{ site.baseurl }}/cloud.jpg;
+	background-image: url({{ site.baseurl }}/cloud.jpg);
 
 }
 
