--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 	
 
 <div id="header">
-<h6 style="margin: 0 auto"> Welcome to VuNguyen's website </h6>
+<h6 style="margin: 0 auto"> Welcome to Vu's website! </h6>
 </div>
  
 <div id="navbar">	
