--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,20 @@
 /* add syntax highlight styles */
 @import url("syntax-highlighting.css");
 
-	
+/* -------------------------------------------------- 
+   header styles
+-----------------------------------------------------*/	
 #header {
-	background-color: green/* #5c755e; */;
+	background-color: blue/* #5c755e; */;
 	margin: 5px;
 	height: 90px;
 	border-radius: 0px;
 	background-image: url({{ site.baseurl }}/cloud.jpg);
 }
 
-
+/* -------------------------------------------------- 
+   top navigation styles
+-----------------------------------------------------*/
 #navbar ul {
 	background-color: black;
 	list-style-type: none;
@@ -59,20 +63,7 @@ h6 {
 
 }
 
-.button {
-background: #e7e7e7;
-border: 1px solid;
-border-radius: 6px;
-font: 700, 16px, Helvetica;
-margin-right: 10px;
-box-sizing: border-box;
-color: #666;
-}
 
-
-.menu {
-	margin: 0 auto;
-}
 /* Portions of styles taken from or modified from normalize.css */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 /**
@@ -726,48 +717,7 @@ aside li {
 .right, .left {
 	float: none;
 }
-/* -------------------------------------------------- 
-   top navigation styles
------------------------------------------------------*/
-nav {
-	background: none;
-	text-align: center;
-	padding: 4em;
-}
-nav ul {
-	display: none;
-	display: inline-block;
-}
-	
-nav ul li {
-	text-align: center;	
-	background: none;
-}
-nav li {
-	background: #42659A;
-	margin-bottom: .2em;
-	text-align: center;
-}
-nav li:hover {
-	background: #333;
-}
-nav li a {
-	font-size: 1.2em;
-	font-weight: 100;
-	text-transform: uppercase;
-	margin: 0;
-	margin-bottom: 0.2em;
-	padding: .5em 0;
-	display: block;
-	max-width: 5em;
-	text-align: center;
-	max-width: 100%;
-	width:100%;
-}
-nav li a:hover {
-	color: #000;
-	background-color: #dadada;
-}
+
 /*toggle check styles*/
 .toggle-label {
 	display: block;
@@ -852,80 +802,7 @@ header p {
 	color: #666;
 	text-transform: uppercase;
 }
-/* -------------------------------------------------- 
-   top navigation styles
------------------------------------------------------*/
-nav {
-	background: ;
-	margin-bottom: 2em;
-	/*background-color: #fff; */
-	text-align: center
-}
-#menu-toggle, .toggle-label {
-		display: none;
-	}
-nav ul {
-	padding: 0;
-	margin: 0;
-	list-style: none;
-	min-height: 0;
-}
-nav li {
-	display: inline-block;
-}
-nav li a {
-	font: 1em 'Oswald', 'Helvetica Narrow', Arial, sans-serif;
-	color: white;
-	background: #0533bc;
-	margin-right: 0.5em;
-	padding: .25em 1em;
-	display: inline-block;
-	text-decoration: none;
-	letter-spacing: 0.1em;
-}
-nav li a:hover {
-	color: #000;
-	background: #dadada;
-}
-	
-nav ul li {
-	float: left;
-	list-style: none;
-	position: relative;
-	text-align: center;
-}
 
-nav ul li a {
-	display: block;
-	font-family: arial;
-	color: white;
-	font-size: 18px;
-	text-decoration: none;
-}
-
-nav  ul li ul li{
-	width: 180px;
-	border-radius: 4px;
-}
-	
-nav  ul li ul {
-	display: none;
-	position: absolute;
-	background-color: #f3f3f3;
-	border-radius: 4px;
-}
-
-nav  ul li:hover ul {
-	display: block;
-}
-	
-nav  ul li ul li a{
-	padding: 8px 10px;
-}
-	
-nav  ul li ul li a: hover{
-	background-color: #f3f3f3;
-}
 /* -------------------------------------------------- 
    article styles
 -----------------------------------------------------*/
