--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
    header styles
 -----------------------------------------------------*/	
 #header {
-	background-color: blue/* #5c755e; */;
+	background-color: #5c755e;
 	margin: 0px;
 	height: 90px;
 	border-radius: 0px;
