--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
  
 <div id="navbar">	
 	<ul>
-	<li><i class="fa fa-home" href="{{site.baseurl}}/index.html">Home</i></li>
+	<li><a class="fa fa-home" href="{{site.baseurl}}/index.html">Home</a></li>
 	<li><a href="{{site.baseurl}}/about.html">Blog</a></li>
 	<li><a href="{{site.baseurl}}/Family.html">Family</a></li>
 	<li><a href="{{site.baseurl}}/Publications.html">Publications</a></li>
