--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,16 @@
   <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
   <link rel="canonical" href="{{ site.baseurl }}{{ page.url }}">
   <link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
+
+<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
   <script src="{{ site.baseurl }}/scripts/modernizr.custom.js"></script>
+	
+	
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -34,7 +40,8 @@
 	<li><a href="{{site.baseurl}}/Publications.html">Publications</a></li>
 	<li><a href="{{site.baseurl}}/Plasticity.html"> Plasticity </a></li>
 	<li><a href="{{site.baseurl}}/geotech.html"> Geomechanics </a></li>
-	<li><a href="{{site.baseurl}}/FEM.html"> FEM </a></li>	
+	<li><a href="{{site.baseurl}}/FEM.html"> FEM </a></li>		
+	<li><a href="http://dantri.com.vn/"><i class="fa fa-trash"></i></a></li>
 	</ul>
 </div>
 	
