--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
  
 <div id="navbar">	
 	<ul>
+	<li><a href="{{site.baseurl}}/index.html"><i class="fa fa-trash"></i>Home</a></li>
 	<li><a class="fa fa-home" href="{{site.baseurl}}/index.html">Home</a></li>
 	<li><a href="{{site.baseurl}}/about.html">Blog</a></li>
 	<li><a href="{{site.baseurl}}/Family.html">Family</a></li>
@@ -41,7 +42,7 @@
 	<li><a href="{{site.baseurl}}/Plasticity.html"> Plasticity </a></li>
 	<li><a href="{{site.baseurl}}/geotech.html"> Geomechanics </a></li>
 	<li><a href="{{site.baseurl}}/FEM.html"> FEM </a></li>		
-	<li><a href="http://dantri.com.vn/"><i class="fa fa-trash"></i></a></li>
+	
 	</ul>
 </div>
 	
