--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
  
 <div id="navbar">	
 	<ul>
-	<li><a href="{{site.baseurl}}/index.html"><i class="fa fa-home"></i>Home</a></li>
-	<li><a href="{{site.baseurl}}/about.html">Blog</a></li>
+	<li><a href="{{site.baseurl}}/index.html"><i class="fa fa-home"></i> Home</a></li>
+	<li><a href="{{site.baseurl}}/about.html"><i class="fa fa-users"></i> About</a></li>
 	<li><a href="{{site.baseurl}}/Family.html">Family</a></li>
 	<li><a href="{{site.baseurl}}/Publications.html">Publications</a></li>
 	<li><a href="{{site.baseurl}}/Plasticity.html"> Plasticity </a></li>
