--- a/css/main.css
+++ b/css/main.css
@@ -16,12 +16,12 @@
    top navigation styles
 -----------------------------------------------------*/
 #navbar ul {
-	background-color: black;
+	background-color: green;
 	list-style-type: none;
 	text-align: center;
 	margin: 0px;
 	border-radius: 5px;
-	padding: 15px;
+	padding: 8px;
 	
 }
 
