--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
 	<li><a href="{{site.baseurl}}/about.html"><i class="fa fa-users"></i> About</a></li>
 	<li><a href="{{site.baseurl}}/Family.html">Family</a></li>
 	<li><a href="{{site.baseurl}}/Publications.html">Publications</a></li>
-	<li><a href="{{site.baseurl}}/Plasticity.html"> Plasticity </a></li>
+	<li><a href="{{site.baseurl}}/Plasticity.html"><i class="fa fa-file-text"></i> Plasticity </a></li>
 	<li><a href="{{site.baseurl}}/geotech.html"> Geomechanics </a></li>
 	<li><a href="{{site.baseurl}}/FEM.html"> FEM </a></li>		
 	
