--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
    top navigation styles
 -----------------------------------------------------*/
 #navbar ul {
-	background-color: red;
+	background-color: black;
 	list-style-type: none;
 	text-align: center;
 	margin: 0px;
