--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,12 @@
 	<li><a href="{{site.baseurl}}/geotech.html"> Geomechanics </a></li>
 	<li><a href="{{site.baseurl}}/FEM.html"> FEM </a></li>		
 	
+		
+		<ul>
+ 		<li><a class = "button" href="{{site.baseurl}}/Plasticity.html"> Plasticity </a></li>
+ 	        <li><a class = "button" href="{{site.baseurl}}/geotech.html"> Geomechanics </a></li>
+ 	        <li><a class = "button" href="{{site.baseurl}}/FEM.html"> FEM </a></li>
+ 		 </ul>
 	</ul>
 </div>
 	
