--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,12 +38,14 @@
 	<li><a href="{{site.baseurl}}/about.html"><i class="fa fa-users"></i> About</a></li>
 	<li><a href="{{site.baseurl}}/Family.html"> Family</a></li>
 	<li><a href="{{site.baseurl}}/Publications.html"> Publications</a></li>
-	<li><a href="{{site.baseurl}}/Plasticity.html"><i class="fa fa-file-pdf-o"></i> Plasticity </a></li>
+	<!--
+		<li><a href="{{site.baseurl}}/Plasticity.html"><i class="fa fa-file-pdf-o"></i> Plasticity </a></li>
 	<li><a href="{{site.baseurl}}/geotech.html"> Geomechanics </a></li>
-	<li><a href="{{site.baseurl}}/FEM.html"> FEM </a></li>		
+		-->
+	<li><a href="#"> Notes </a></li>		
 	
 		
-		<ul>
+		<ul style="display: inline-block;">
  		<li><a class = "button" href="{{site.baseurl}}/Plasticity.html"> Plasticity </a></li>
  	        <li><a class = "button" href="{{site.baseurl}}/geotech.html"> Geomechanics </a></li>
  	        <li><a class = "button" href="{{site.baseurl}}/FEM.html"> FEM </a></li>
