--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@
 	text-decoration: none;
 	font-family: Arial;
 	padding: .5em 1.5em;
-	color: #fff;
+	color: blue; /* #fff;*/
 	background-color: #000;
 	display: block;
 }
@@ -45,7 +45,7 @@
 	color: black;
 	background-color: white;
 	border-radius: 6px;
-	/*display: block;*/
+	display: block;
 }
 
 	
