--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,12 +36,13 @@
 	<li><a href="{{site.baseurl}}/Plasticity.html"><i class="fa fa-file-pdf-o"></i> Plasticity </a></li>
 	<li><a href="{{site.baseurl}}/geotech.html"> Geomechanics </a></li>
 	-->
-	<li><a href="#"> Notes </a></li>			
+	<li><a href="#"> Academic notes </a>			
 		<ul style="display: inline-block;">
  		<li><a class = "button" href="{{site.baseurl}}/Plasticity.html"> Plasticity </a></li>
  	        <li><a class = "button" href="{{site.baseurl}}/geotech.html"> Geomechanics </a></li>
  	        <li><a class = "button" href="{{site.baseurl}}/FEM.html"> FEM </a></li>
  		 </ul>
+	</li>
 	</ul>
 </div>
 	
