--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
    top navigation styles
 -----------------------------------------------------*/
 #navbar ul {
-	background-color: green;/* #000;*/
+	background-color: #000;
 	list-style-type: none;
 	text-align: center;
 	margin: 0px;
@@ -24,12 +24,12 @@
 	padding: 8px;
 	
 }
-/*
+
 #navbar ul li {
 	display: inline-block;
 	position: relative;
 }
-*/
+
 
 #navbar ul li ul {
 	display: none；
