--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 	<li><a href="{{site.baseurl}}/Plasticity.html"><i class="fa fa-file-pdf-o"></i> Plasticity </a></li>
 	<li><a href="{{site.baseurl}}/geotech.html"> Geomechanics </a></li>
 	-->
-	<li><a href="#"><i class="fa fa-bars"></i></a>			
+	<li><a href="#"><i class="fa fa-bars"></i> Notes</a>			
 		<ul>
  		<li><a class = "button" href="{{site.baseurl}}/Plasticity.html"> Plasticity </a></li>
  	        <li><a class = "button" href="{{site.baseurl}}/geotech.html"> Geomechanics </a></li>
