--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -5,7 +5,7 @@
 
 .highlight {
    
-  .hll { background-color: #ffffcc}
+  .hll { background-color: black;/*#ffffcc*/}
   .c { color: #87ceeb ; font-style: italic} /* Comment */
   .err { color: #ffffff} /* Error */
   .g { color: #ffffff} /* Generic */
